top-level dark mode CSS to avoid the flash

--- a/src/GoBrennas.scss
+++ b/src/GoBrennas.scss
@@ -98,6 +98,11 @@ body {
 }
 
 @media (prefers-color-scheme: dark) {
+    html,
+    body {
+        color: #f2f4f5;
+        background-color: #2d2f31;
+    }
     .markdown {
         .diff {
             .range {
